# mt5-data-provider

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
client/: mt5_client.py
docs/: API.md  DEPLOY-NUVEM.md  Documentacao-original.md  INTEGRACAO-HARNESS.md  LIVE-WINDOWS.md  MIGRACAO-WINDOWS.md  SECURITY.md
scripts/: apply-symbol-map.ps1  bootstrap-windows.ps1  check-dependencies.ps1  check-mt5-stack.ps1  disable-local-automation.ps1  discover-mt5-symbols.ps1  fix-cloudflared-config.ps1  install-all-tasks.ps1  install-cloudflare-task.ps1  install-cloudflare-tunnel.ps1  install-cloudflared.ps1  install-watchdog-task.ps1  migrate-export.ps1  migrate-import.ps1  show-mt5-window.ps1  start-live.ps1  start-tunnel.ps1  stop-stack.ps1  watchdog-cloudflare.ps1  watchdog-mt5.ps1
scripts/lib/: cloudflared-common.ps1  process-common.ps1
src/mt5_provider/: __init__.py  app.py  auth.py  cli.py  config.py  exceptions.py  live_backend.py  provider.py  stub_backend.py  timeframes.py
tests/: test_api.py  test_client.py  test_provider.py
